push prod version

--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <link href="https://fonts.googleapis.com/css2?family=Alata&family=Roboto:ital@0;1&display=swap" rel="stylesheet">
-    <title>d2-bounties</title>
-    <style>
-        body {
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/><link href="https://fonts.googleapis.com/css2?family=Alata&family=Roboto:ital@0;1&display=swap" rel="stylesheet"><title>d2-bounties</title><style>body {
             transition: font-size 2s;
             font-family: 'Roboto', sans-serif;
             background: #111;
@@ -14,10 +6,4 @@
             width: 100%;
             height: 100vh;
             margin: 0;
-        }
-    </style>
-</head>
-<body>
-    <div id="app"></div>
-<script src="main.js"></script></body>
-</html>
+        }</style></head><body><div id="app"></div><script src="main.js"></script></body></html>
