--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/><link href="https://fonts.googleapis.com/css2?family=Alata&family=Roboto:ital@0;1&display=swap" rel="stylesheet"><title>d2-bounties</title><style>body {
-            transition: font-size 2s;
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/><title>d2-bounties</title><style>body {
             font-family: 'Roboto', sans-serif;
-            background: #111;
-            color: #ccc;
             width: 100%;
             height: 100vh;
             margin: 0;
