--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/><title>d2-bounties</title><style>body {
-            font-family: 'Roboto', sans-serif;
-            width: 100%;
-            height: 100vh;
-            margin: 0;
-        }</style></head><body><div id="app"></div><script src="main.js"></script></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';"/><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/><title>d2-bounties</title></head><body><div id="app"></div><script src="main.js"></script></body></html>
